@@ -1,215 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2011/01/23 08:19:35 obache Exp $
-include/goocanvasmm-1.0/goocanvasmm.h
-include/goocanvasmm-1.0/goocanvasmm/bounds.h
-include/goocanvasmm-1.0/goocanvasmm/canvas.h
-include/goocanvasmm-1.0/goocanvasmm/ellipse.h
-include/goocanvasmm-1.0/goocanvasmm/ellipsemodel.h
-include/goocanvasmm-1.0/goocanvasmm/enums.h
-include/goocanvasmm-1.0/goocanvasmm/grid.h
-include/goocanvasmm-1.0/goocanvasmm/gridmodel.h
-include/goocanvasmm-1.0/goocanvasmm/group.h
-include/goocanvasmm-1.0/goocanvasmm/groupmodel.h
-include/goocanvasmm-1.0/goocanvasmm/image.h
-include/goocanvasmm-1.0/goocanvasmm/imagemodel.h
-include/goocanvasmm-1.0/goocanvasmm/init.h
-include/goocanvasmm-1.0/goocanvasmm/item.h
-include/goocanvasmm-1.0/goocanvasmm/itemmodel.h
-include/goocanvasmm-1.0/goocanvasmm/itemmodelsimple.h
-include/goocanvasmm-1.0/goocanvasmm/itemsimple.h
-include/goocanvasmm-1.0/goocanvasmm/linedash.h
-include/goocanvasmm-1.0/goocanvasmm/path.h
-include/goocanvasmm-1.0/goocanvasmm/pathmodel.h
-include/goocanvasmm-1.0/goocanvasmm/points.h
-include/goocanvasmm-1.0/goocanvasmm/polyline.h
-include/goocanvasmm-1.0/goocanvasmm/polylinemodel.h
-include/goocanvasmm-1.0/goocanvasmm/private/bounds_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/canvas_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/ellipse_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/ellipsemodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/enums_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/grid_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/gridmodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/group_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/groupmodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/image_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/imagemodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/item_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/itemmodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/itemmodelsimple_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/itemsimple_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/linedash_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/path_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/pathmodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/points_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/polyline_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/polylinemodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/rect_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/rectmodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/style_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/table_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/tablemodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/text_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/textmodel_p.h
-include/goocanvasmm-1.0/goocanvasmm/private/widget_p.h
-include/goocanvasmm-1.0/goocanvasmm/rect.h
-include/goocanvasmm-1.0/goocanvasmm/rectmodel.h
-include/goocanvasmm-1.0/goocanvasmm/style.h
-include/goocanvasmm-1.0/goocanvasmm/table.h
-include/goocanvasmm-1.0/goocanvasmm/tablemodel.h
-include/goocanvasmm-1.0/goocanvasmm/text.h
-include/goocanvasmm-1.0/goocanvasmm/textmodel.h
-include/goocanvasmm-1.0/goocanvasmm/types.h
-include/goocanvasmm-1.0/goocanvasmm/widget.h
-include/goocanvasmm-1.0/goocanvasmm/wrap_init.h
-lib/goocanvasmm-1.0/include/goocanvasmmconfig.h
-lib/libgoocanvasmm-1.0.la
-lib/pkgconfig/goocanvasmm-1.0.pc
-share/devhelp/books/goocanvasmm-1.0/goocanvasmm-1.0.devhelp2
-share/doc/goocanvasmm-1.0/reference/goocanvasmm-1.0.tag
-share/doc/goocanvasmm-1.0/reference/html/annotated.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Bounds-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Bounds.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Canvas-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Canvas.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Canvas__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Ellipse-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Ellipse.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1EllipseModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1EllipseModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1EllipseModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Ellipse__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Grid-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Grid.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1GridModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1GridModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1GridModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Grid__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Group-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Group.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1GroupModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1GroupModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1GroupModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Group__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Image-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Image.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ImageModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ImageModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ImageModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Image__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Item-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Item.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemModelSimple-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemModelSimple.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemModelSimple__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemSimple-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemSimple.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1ItemSimple__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Item__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1LineDash-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1LineDash.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Path-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Path.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1PathModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1PathModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1PathModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Path__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Points-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Points.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Polyline-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Polyline.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1PolylineModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1PolylineModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1PolylineModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Polyline__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Rect-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Rect.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1RectModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1RectModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1RectModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Rect__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Style-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Style.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Style__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Table-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Table.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1TableModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1TableModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1TableModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Table__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Text-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Text.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1TextModel-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1TextModel.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1TextModel__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Text__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Widget-members.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Widget.html
-share/doc/goocanvasmm-1.0/reference/html/classGoocanvas_1_1Widget__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classHelperList.html
-share/doc/goocanvasmm-1.0/reference/html/classHelperList__inherit__graph.png
-share/doc/goocanvasmm-1.0/reference/html/classes.html
-share/doc/goocanvasmm-1.0/reference/html/doxygen.css
-share/doc/goocanvasmm-1.0/reference/html/doxygen.png
-share/doc/goocanvasmm-1.0/reference/html/functions.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x62.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x63.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x65.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x66.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x67.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x69.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x6b.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x6c.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x6d.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x6f.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x70.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x72.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x73.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x74.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x75.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x77.html
-share/doc/goocanvasmm-1.0/reference/html/functions_0x7e.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x62.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x63.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x65.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x66.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x67.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x69.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x6b.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x6c.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x6d.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x6f.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x70.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x72.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x73.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x74.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x75.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x77.html
-share/doc/goocanvasmm-1.0/reference/html/functions_func_0x7e.html
-share/doc/goocanvasmm-1.0/reference/html/functions_vars.html
-share/doc/goocanvasmm-1.0/reference/html/graph_legend.html
-share/doc/goocanvasmm-1.0/reference/html/graph_legend.png
-share/doc/goocanvasmm-1.0/reference/html/group__goocanvasmmEnums.html
-share/doc/goocanvasmm-1.0/reference/html/hierarchy.html
-share/doc/goocanvasmm-1.0/reference/html/index.html
-share/doc/goocanvasmm-1.0/reference/html/inherit__graph__0.png
-share/doc/goocanvasmm-1.0/reference/html/inherit__graph__1.png
-share/doc/goocanvasmm-1.0/reference/html/inherit__graph__2.png
-share/doc/goocanvasmm-1.0/reference/html/inherit__graph__3.png
-share/doc/goocanvasmm-1.0/reference/html/inherit__graph__4.png
-share/doc/goocanvasmm-1.0/reference/html/inherits.html
-share/doc/goocanvasmm-1.0/reference/html/modules.html
-share/doc/goocanvasmm-1.0/reference/html/namespaceAtk.html
-share/doc/goocanvasmm-1.0/reference/html/namespaceGoocanvas.html
-share/doc/goocanvasmm-1.0/reference/html/namespacemembers.html
-share/doc/goocanvasmm-1.0/reference/html/namespacemembers_enum.html
-share/doc/goocanvasmm-1.0/reference/html/namespacemembers_eval.html
-share/doc/goocanvasmm-1.0/reference/html/namespacemembers_func.html
-share/doc/goocanvasmm-1.0/reference/html/namespaces.html
-share/doc/goocanvasmm-1.0/reference/html/tab_b.gif
-share/doc/goocanvasmm-1.0/reference/html/tab_l.gif
-share/doc/goocanvasmm-1.0/reference/html/tab_r.gif
-share/doc/goocanvasmm-1.0/reference/html/tabs.css
